# synthesis.game

./: .clang-format  .clangd  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  IMPL_CONVO1.md  README.md  __main__.py  build.sh  compile_commands.json  cross-clang.ini  deez.txt  dependency_graph.py  discover.py  features.toml  gen_compile_commands.py  meson.build  reorganize_modules.py  run.sh
config/: mac.txt
desktop/: lib-synthesis.dylib  shader.metal
desktop/src/: Math.cs  MathExtensions.cs  Program.cs  ProjectionExtensions.cs  Quaternion.cs  QuaternionExtensions.cs
include/: darwin  metal  posix
mac/: build.sh
mac/src/: Alloc.swift  Big.swift  Block.swift  Camera.swift  Controller.swift  Gpu.swift  Index.swift  Lib.swift  Palette.swift  Render.swift  Staging.swift  Tree.swift  shader copy.metal  shader.metal
module/algorithm/: function  iterator
module/collection/: box  buffer  deque  list  map  pair  rc  ring  set  slice  str  string
module/core/: alloc  atomic  box  buffer  compare  console  error  format  fp  hash  iterator  math  meta  net  null  optional  platform  random  rc  result  ring  set  span  str  tcp  thread  trait  type  udp  variant
module/io/: binary  console  file  format  fs  io  net  path  print  stream  tcp  udp
module/math/: compare  hash  limit  math  random
module/memory/: alloc
module/sync/: atomic
module/system/: semantic  time
module/task/: thread
module_backup/collection/: alloc  box
module_backup/core/: algorithm  binary  console  deque  error  file  fs  function  io  limit  list  map  math  null  optional  pair  path  platform  print  result  semantic  slice  stream  string  time  trait  type  variant
prompt/: ANALYST_REPORT.md  IMPLEMENTATION_PLAN.md
src/: main
src/core/: variant
src/io/: print.posix
src/memory/: alloc.posix  box
src_backup/: main
src_backup/core/: alloc.posix  box  print.posix  variant
vk/: build.zig
vk/src/: analyzer.zig  context.zig  entry.zig  error.zig  generator.zig  main.zig  types.zig  vulkan.h  wrapper.zig
